src/test/deca/codegen/valid/cast_null_on_class.deca
// Test cast null on class, 3.39

class A {
    void display(){
        print("");
    }
}

{
    A a = (A) (null); 
}