src/test/deca/codegen/invalid/call_field_on_null.deca

class A {
    int x = 1;
}

{
    A a = null;
    a.x;
}